gen/InterpreterParser.py
# Generated from /Users/diegopicazo/Documents/github/MIPS32Simulator/Interpreter.g4 by ANTLR 4.13.1
# encoding: utf-8
from library.antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from InstructionMemory import InstructionMemory
from DataMemory import DataMemory
from LabelAddressMemory import LabelAddressMemory


class InterpreterParser ( Parser ):

    grammarFileName = "Interpreter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.asciiz'", "'.word'", "'.data'", "'.text'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'syscall'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "COMMENT", "TAG", "STRING", "INTEGER", 
                      "SYSCALL", "R_OPERATION", "I_OPERATION", "J_OPERATION" ]

    RULE_data = 0
    RULE_data_block = 1
    RULE_instruction = 2
    RULE_instruction_block = 3
    RULE_interpret = 4

    ruleNames =  [ "data", "data_block", "instruction", "instruction_block", 
                   "interpret" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WS=5
    COMMENT=6
    TAG=7
    STRING=8
    INTEGER=9
    SYSCALL=10
    R_OPERATION=11
    I_OPERATION=12
    J_OPERATION=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._TAG = None # Token
            self._STRING = None # Token
            self._INTEGER = None # Token

        def TAG(self):
            return self.getToken(InterpreterParser.TAG, 0)

        def STRING(self):
            return self.getToken(InterpreterParser.STRING, 0)

        def INTEGER(self):
            return self.getToken(InterpreterParser.INTEGER, 0)

        def WS(self):
            return self.getToken(InterpreterParser.WS, 0)

        def getRuleIndex(self):
            return InterpreterParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = InterpreterParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_data)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            localctx._TAG = self.match(InterpreterParser.TAG)
            self.state = 12
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 11
                self.match(InterpreterParser.WS)


            self.state = 20
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 14
                self.match(InterpreterParser.T__0)
                self.state = 15
                localctx._STRING = self.match(InterpreterParser.STRING)

                generated_address = DataMemory.generate_address()
                DataMemory.write(generated_address, (None if localctx._STRING is None else localctx._STRING.text))
                LabelAddressMemory.write((None if localctx._TAG is None else localctx._TAG.text).replace(':', ''), (generated_address, 'D'))

                pass
            elif token in [2]:
                self.state = 17
                self.match(InterpreterParser.T__1)
                self.state = 18
                localctx._INTEGER = self.match(InterpreterParser.INTEGER)

                generated_address = DataMemory.generate_address()
                DataMemory.write(DataMemory.generate_address(),
                        int((None if localctx._INTEGER is None else localctx._INTEGER.text)))
                LabelAddressMemory.write((None if localctx._TAG is None else localctx._TAG.text).replace(':', ''), (generated_address, 'D'))

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterpreterParser.DataContext)
            else:
                return self.getTypedRuleContext(InterpreterParser.DataContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(InterpreterParser.WS)
            else:
                return self.getToken(InterpreterParser.WS, i)

        def getRuleIndex(self):
            return InterpreterParser.RULE_data_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_block" ):
                listener.enterData_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_block" ):
                listener.exitData_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_block" ):
                return visitor.visitData_block(self)
            else:
                return visitor.visitChildren(self)




    def data_block(self):

        localctx = InterpreterParser.Data_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_data_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(InterpreterParser.T__2)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 23
                self.match(InterpreterParser.WS)


            self.state = 26
            self.data()
            self.state = 33
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 28
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==5:
                        self.state = 27
                        self.match(InterpreterParser.WS)


                    self.state = 30
                    self.data() 
                self.state = 35
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 36
                self.match(InterpreterParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.generated_address = None

        def SYSCALL(self):
            return self.getToken(InterpreterParser.SYSCALL, 0)

        def R_OPERATION(self):
            return self.getToken(InterpreterParser.R_OPERATION, 0)

        def I_OPERATION(self):
            return self.getToken(InterpreterParser.I_OPERATION, 0)

        def J_OPERATION(self):
            return self.getToken(InterpreterParser.J_OPERATION, 0)

        def getRuleIndex(self):
            return InterpreterParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = InterpreterParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15360) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()

            generated_address = InstructionMemory.generate_address()
            InstructionMemory.write(generated_address, self._input.getText(localctx.start, self._input.LT(-1)).replace('\t', '    '))
            localctx.generated_address = generated_address

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Instruction_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._TAG = None # Token
            self._instruction = None # InstructionContext

        def TAG(self):
            return self.getToken(InterpreterParser.TAG, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterpreterParser.InstructionContext)
            else:
                return self.getTypedRuleContext(InterpreterParser.InstructionContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(InterpreterParser.WS)
            else:
                return self.getToken(InterpreterParser.WS, i)

        def getRuleIndex(self):
            return InterpreterParser.RULE_instruction_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction_block" ):
                listener.enterInstruction_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction_block" ):
                listener.exitInstruction_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction_block" ):
                return visitor.visitInstruction_block(self)
            else:
                return visitor.visitChildren(self)




    def instruction_block(self):

        localctx = InterpreterParser.Instruction_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instruction_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            localctx._TAG = self.match(InterpreterParser.TAG)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 43
                self.match(InterpreterParser.WS)


            self.state = 46
            localctx._instruction = self.instruction()

            LabelAddressMemory.write((None if localctx._TAG is None else localctx._TAG.text).replace(':', ''), (localctx._instruction.generated_address, 'I'))

            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==5:
                        self.state = 48
                        self.match(InterpreterParser.WS)


                    self.state = 51
                    localctx._instruction = self.instruction() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 57
                self.match(InterpreterParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterpretContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_block(self):
            return self.getTypedRuleContext(InterpreterParser.Data_blockContext,0)


        def instruction_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(InterpreterParser.Instruction_blockContext)
            else:
                return self.getTypedRuleContext(InterpreterParser.Instruction_blockContext,i)


        def COMMENT(self):
            return self.getToken(InterpreterParser.COMMENT, 0)

        def getRuleIndex(self):
            return InterpreterParser.RULE_interpret

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterpret" ):
                listener.enterInterpret(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterpret" ):
                listener.exitInterpret(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterpret" ):
                return visitor.visitInterpret(self)
            else:
                return visitor.visitChildren(self)




    def interpret(self):

        localctx = InterpreterParser.InterpretContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_interpret)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 60
                    self.data_block()


                self.state = 63
                self.match(InterpreterParser.T__3)
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 64
                    self.instruction_block()
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==7):
                        break

                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(InterpreterParser.COMMENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





